[tool.poetry]
name = "shelfmade"
version = "1.1.0"
description = "Quick and dirty script shelf panel for Blender"
authors = ["tristan.weis <mail@tristanweis.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
fake-bpy-module-latest = "^20230821"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
